' Generated by UML Generator
' Encoded: dPDDJuGm48Rl_HLDlB1k89uvcDNTn7WpOM_6mr16R8IMj8DVw_hRBR0VeI0nN4WpyyupR_8EAqjWg2uBPb-bgi10oKK1rjuG6PdMXFT2gqH-8RzYBp93BgGH1J8c5Q5v1e7ymKY1QrrMMg4YlcES_-H8RJbOn3pJTUeczeorP7uB5jjcAmshvdbIkKBeFikJAEZr5qrl70wf9GE2-7dBHbgXQqKR5De0QTDkl7WtK5MOnPxptkx1QF37r8IZpaY2OBM2uaXiFIpzwcpyMjTEsOVtQxFHTybs2nyTidlFHXsz99-MiEoGEtTx9CMUbo1L02QtCK_SrQdyySaXthJC6i3vNABe-zhFR3pc_oilmz0N3W8BGqSR7HzgesYms4jeWkOfHrY7I2OO1yN8x0fLvlxqNm
' URL: http://www.plantuml.com/plantuml/uml/dPDDJuGm48Rl_HLDlB1k89uvcDNTn7WpOM_6mr16R8IMj8DVw_hRBR0VeI0nN4WpyyupR_8EAqjWg2uBPb-bgi10oKK1rjuG6PdMXFT2gqH-8RzYBp93BgGH1J8c5Q5v1e7ymKY1QrrMMg4YlcES_-H8RJbOn3pJTUeczeorP7uB5jjcAmshvdbIkKBeFikJAEZr5qrl70wf9GE2-7dBHbgXQqKR5De0QTDkl7WtK5MOnPxptkx1QF37r8IZpaY2OBM2uaXiFIpzwcpyMjTEsOVtQxFHTybs2nyTidlFHXsz99-MiEoGEtTx9CMUbo1L02QtCK_SrQdyySaXthJC6i3vNABe-zhFR3pc_oilmz0N3W8BGqSR7HzgesYms4jeWkOfHrY7I2OO1yN8x0fLvlxqNm
' Generated on: 2025-12-17T15:26:45.142881811

@startuml
skinparam classAttributeIconSize 0
hide circle

interface PriceComponent {
  ~getPrice(): double
}

class BasePrice {
  -price: double
  --
  +BasePrice(price: double)
  +getPrice(): double
}

abstract class BaseDiscountDecorator {
  #wrapped: PriceComponent
  --
  +BaseDiscountDecorator(wrapped: PriceComponent)
  +getPrice(): double
}

class SeasonalDiscount {
  +SeasonalDiscount(wrapped: PriceComponent)
  +getPrice(): double
}

class CouponDiscount {
  +CouponDiscount(wrapped: PriceComponent)
  +getPrice(): double
}

class GSTTax {
  +GSTTax(wrapped: PriceComponent)
  +getPrice(): double
}

class DiscountSystem {
  +{static} main(args: String[]): void
}

BasePrice ..|> PriceComponent
BaseDiscountDecorator ..|> PriceComponent
BaseDiscountDecorator *-- PriceComponent
SeasonalDiscount --|> BaseDiscountDecorator
SeasonalDiscount ..> PriceComponent
CouponDiscount --|> BaseDiscountDecorator
CouponDiscount ..> PriceComponent
GSTTax --|> BaseDiscountDecorator
GSTTax ..> PriceComponent
@enduml